...
        tabBarLabelStyle: styles.label,
      }}
    >
      <Tabs.Screen
        name="index"
        options={{
          title: 'Feed',
          tabBarIcon: ({ color }) => <Home size={24} color={color} strokeWidth={1.75} />,
        }}
      />
      <Tabs.Screen
        name="search"
        options={{
...
